content/docs/1.11.0/nodes-and-volumes/volumes/volume-size.md
---
title: Volume Size
weight: 4
---

In this section, you'll have a better understanding of concepts related to volume size.

## Volume `Size`:

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-nominal-size.png" >}}

This value, which you specified during volume creation, represents the amount of space available to the volume when in use. 

The following are other ways of understanding this concept:

- The volume itself is just a Kubernetes CRD object and volume data is stored in replicas. This value represents the nominal size of each replica. 
- Longhorn replicas use [sparse files](https://wiki.archlinux.org/index.php/Sparse_file) to store data. This value represents the maximum size to which a sparse file may expand.

Replicas are scheduled on nodes with enough allocatable space to cover this nominal size during volume creation. For more information, see [Node Space Usage](../../nodes/node-space-usage).

> **Note**: The maximum volume size is based on the disk's file system (for example, 16383 GiB for `ext4`).

## Volume `Actual Size`

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-actual-size.png" >}}

This value represents the amount of space used by each replica (including the volume head and snapshots) on the node.

Because all historical data (stored in the snapshots) and active data are included in the calculation, this value can exceed the user-defined nominal size.

The Longhorn UI displays this value only when the volume is running.

## Example

In the example, we will explain how volume `size` and `actual size` get changed after a bunch of IO and snapshot related operations.

> The illustration presents the file organization of **one replica**. The volume head and snapshots are actually sparse files, which we mentioned above.

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration.png" >}}


1. Create a 12 Gi volume with a single replica, then attach and mount it on a node. See Figure 1 of the illustration.
    - For the empty volume, the nominal `size` is 12 Gi and the `actual size` is almost 0.
    - There is some meta info in the volume hence the `actual size` is 260 Mi and is not exactly 0.

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration-fig1.png" >}}

2. Write 4 Gi data (data#0) in the volume mount point. The `actual size` is increased by 4 Gi because of the allocated blocks in the replica for the 4 Gi data. Meanwhile, `df` command in the filesystem also shows the 4 Gi used space. See Figure 2 of the illustration.

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration-fig2.png" >}}

3. Delete the 4 Gi data. Then, `df` command shows that the used space of the filesystem is nearly 0, but the `actual size` is unchanged.

    > Users can see by default the volume `actual size` is not shrunk after deleting the 4 Gi data. Longhorn is a block-level storage system. Therefore, the deletion in the filesystem only marks the blocks that belong to the deleted file as unused. Currently, Longhorn will not apply TRIM/UNMAP operations automatically/periodically. if you want to do filesystem trim, please check [this doc](../trim-filesystem) for details.

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration-fig2.png" >}}

4. Then, rewrite the 4 Gi data (data#1), and the `df` command in the filesystem shows 4 Gi used space again. However, the `actual size` is increased by 4 Gi and becomes 8.25Gi. See Figure 3(a) of the illustration.

     > After deletion, filesystem may or maynot reuse the recently freed blocks from recently deleted files according to the filesystem design and please refer to [Block allocation strategies of various filesystems](https://www.ogris.de/blkalloc). If the volume nominal `size` is 12 Gi, the `actual size` in the end would range from 4 Gi to 8 Gi since the filesystem may or maynot reuse the freed blocks. On the other hand, if the volume nominal `size` is 6 Gi, the `actual size` at the end would range from 4 Gi to 6 Gi, because the filesystem has to reuse the freed blocks in the 2nd round of writing. See Figure 3(b) of the illustration.
     >
     > Thus, allocating an appropriate nominal `size` for a volume that holds heavy writing tasks according to the IO pattern would make disk space usage more efficient.

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration-fig3.png" >}}

5. Take a snapshot (snapshot#1). See Figure 4 of the illustration.
    - Now data#1 is stored in snapshot#1.
    - The new volume head size is almost 0.
    - With the volume head and the snapshot included, the `actual size` remains 8.25 Gi.

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration-fig4.png" >}}

6. Delete data#1 from the mount point.
    - The data#1 filesystem level removal info is stored in current volume head file. For snapshot#1, data#1 is still retained as the historical data.
    - The `actual size` is still 8.25 Gi.

7. Write 8 Gi data (data#2) in the volume mount, then take one more snapshot (snapshot#2). See Figure 5 of the illustration.
    - Now the `actual size` is 16.2 Gi, which is greater than the volume nominal `size`.
    - From a filesystem's perspective, the overlapping part between the two snapshots is considered as the blocks that have to be reused or overwritten. But in terms of Longhorn, these blocks are actually fresh ones held in another snapshot/volume head. See the 2 snapshots in Figure 6.

    > The volume head holds the latest data of the volume only, while each snapshot may store historical data as well as active data, which consumes at most size space. Therefore, the volume `actual size`, which is the size sum of the volume head and all snapshots, is possibly bigger than the size specified by users.
    >
    > Even if users will not take snapshots for volumes, there are operations like rebuilding, expansion, or backing up that would lead to system (hidden) snapshot creation. As a result, volume `actual size` being larger than size is unavoidable under some use cases.

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration-fig5.png" >}}

8. Delete snapshot#1 and wait for snapshot purge complete. See Figure 7 of the illustration.
    - Here Longhorn actually coalesces the snapshot#1 with the snapshot#2.
    - For the overlapping part during coalescing, the newer data (data#2) will be retained in the blocks. Then some historical data is removed and the volume gets shrunk (from 16.2 Gi to 11.4 Gi in the example).

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration-fig6.png" >}}

9. Delete all existing data (data#2) and write 11.5 Gi data (data#3) in the volume mount. See Figure 8 of the illustration.
    - this makes the volume head actual size becomes 11.5 Gi and the volume total actual size becomes 22.9 Gi.

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration-fig7.png" >}}

10. Try to delete the only snapshot (snapshot#2) of the volume. See Figure 9 of the illustration.
    - The snapshot directly behinds the volume head cannot be cleaned up.
      If users try to delete this kind of snapshot, Longhorn will mark the snapshot as Removing, hide it, then try to free the overlapping part between the volume head and the snapshot for the snapshot file.
      The last operation is called snapshot prune in Longhorn and is available since v1.3.0.
    - Since in the example both the snapshot and the volume head use up most of the nominal space, the overlapping part almost equals to the snapshot actual size. After the pruning, the snapshot actual size is down to 259 Mi and the volume gets shrunk from 22.9 Gi to 11.8 Gi.

{{< figure src="/img/screenshots/volumes-and-nodes/volume-size-illustration-fig8.png" >}}


Here we summarize the important things related to disk space usage we have in the example:

- Unused blocks are not released

  Longhorn will not issue TRIM/UNMAP operations automatically. Hence deleting files from filesystems will not lead to volume actual size decreasing/shrinking. You may need to check [the doc](../trim-filesystem) and handle it by yourself if needed.


- Allocated blocks but unused are not reused

  Deleting then writing new files would lead to the actual size keeps increasing. Since the filesystem may not reuse the recently freed blocks from recently deleted files. Thus, allocating an appropriate nominal size for a volume that holds heavy writing tasks according to the IO pattern would make disk space usage more efficient.

- By deleting snapshots, the overlapping part of the used blocks might be eliminated regardless of whether the blocks are recently released blocks by the filesystem or still contain historical data.

## Space Configuration Suggestions for Volumes

1. Reserve enough free space in disks as buffers in case of the actual size of existing volumes keep growing up.
    - A general estimation for the maximum space consumption of a volume is

        ```
        (N + 1) x head/snapshot average actual size
        ```

        - where `N` is the total number of snapshots the volume contains (including the volume head), and the extra `1` is for the temporary space that may be required by snapshot deletion.
        - The average actual size of the snapshots varies and depends on the use cases.
          If snapshots are created periodically for a volume (e.g. by relying on snapshot recurring jobs), the average value would be the average modified data size for the volume in the snapshot creation interval.
          If there are heavy writing tasks for volumes, the head/snapshot average actual size would be volume the nominal size. In this case, it's better to set [`Storage Over Provisioning Percentage`](../../../references/settings/#storage-over-provisioning-percentage) to be smaller than 100% to avoid disk space exhaustion.
        - Some extended cases:
            - There is one snapshot recurring job with retention number is `N`. Then the formula can be extended to:

                ```
                (M + N + 1 + 1 + 1 + 1) x head/snapshot average actual size
                ```

                - The explanation of the formula:
                    - `M` is the snapshots created by users manually. Recurring jobs are not responsible for removing this kind of snapshot. They can be deleted by users only.
                    - `N` is the snapshot recurring job retain number.
                    - The 1st `1` means the volume head.
                    - The 2nd `1` means the extra snapshot created by the recurring job. Since the recurring job always creates a new snapshot then deletes the oldest snapshot when the current snapshots created by itself exceeds the retention number. Before the deletion starts, there is one extra snapshot that can take extra disk space.
                    - The 3rd `1` is the system snapshot. If the rebuilding is triggered or the expansion is issued, Longhorn will create a system snapshot before starting the operations. And this system snapshot may not be able to get cleaned up immediately.
                    - The 4th `1` is for the temporary space that may be required by snapshot deletion/purge.
            - Users don't want snapshot at all. Neither (manually created) snapshot nor recurring job will be launched. Assume [setting _Automatically Cleanup System Generated Snapshot_](../../../references/settings/#automatically-clean-up-system-generated-snapshot) is enabled, then formula would become:

                ```
                (1 + 1 + 1) x head/snapshot average actual size
                ```

                - The worst case that leads to so much space usage:
                    1. At some point the 1st rebuilding/expansion is triggered, which leads to the 1st system snapshot creation.
                        - The purges before and after the 1st rebuilding does nothing.
                    2. There is data written to the new volume head, and the 2nd rebuilding/expansion somehow is triggered.
                        - The snapshot purge before the 2nd rebuilding may lead to the shrink of the 1st system snapshot.
                        - Then the 2nd system snapshot is created and the rebuilding is started.
                        - After the rebuilding done, the subsequent snapshot purge would lead to the coalescing of the 2 system snapshots. This coalescing requires temporary space.
                    3. During the afterward snapshot purging for the 2nd rebuilding, there is more data written to the new volume head.
                - The explanation of the formula:
                    - The 1st `1` means the volume head.
                    - The 2nd `1` is the second system snapshot mentioned in the worst case.
                    - The 3rd `1` is for the temporary space that may be required by the 2 system snapshot purge/coalescing.

2. Do not retain too many snapshots for the volumes.

3. Cleaning up snapshots will help reclaim disk space. There are two ways to clean up snapshots:
    - Delete the snapshots manually via Longhorn UI.
    - Set a snapshot recurring job with retention 1, then the snapshots will be cleaned up automatically.

    Also, notice that the extra space, up to volume nominal `size`, is required during snapshot cleanup and merge.

4. An appropriate the volume nominal `size` according to the workloads.

## Troubleshooting

### Workload is Hitting "no space left on device" Error

To address the "no space left on device" error, you need to understand that the difference between a volume being full and the node disks being full is crucial for proper storage management in Longhorn.

#### Volume Full

A volume is full when the filesystem mounted on it has reached its capacity limit.

- Data writes fail with "no space left on device" errors.
- The host disk for the replica of the volume may still have available space for other volumes.

- **Characteristics**:
  - The `df` command shows 100% usage for the mounted filesystem.
  - Applications cannot write new data to the volume mount point.

- **Example**

    ```bash
    $ df -h /mnt/longhorn-volume-example-dir
    Filesystem                    Size  Used Avail Use% Mounted on
    /dev/longhorn-volume-example   12G   12G    0  100% /mnt/longhorn-volume-example-dir
    ```

#### Node Disk Full

Node disks do not have enough space to accommodate volume operations because volumes are thin-provisioned and the replica sizes on the disks continue to grow.

- Data writes fail with "no space left on device" errors.
- Volume operations, such as volume creation/expansion, snapshot creation/deletion, and replica rebuilding, may be limited.
- Replicas of newly created volumes are prevented from being scheduled to the full disks.

- **Characteristics**:
  - Applications cannot write new data to the volume mount point even though the volume is not full.
  - Longhorn operations for volumes on these node disks, such as replica creation, rebuilding, or snapshot operations, may fail.
  - Volumes with replicas sharing the same node disks are affected.

##### Data Integrity Protection for Disks Out-of-Space Scenarios

When multiple replicas simultaneously encounter "no space left on device" errors, Longhorn implements data integrity protection. If all writable replicas are on disks that are out of space, the system preserves the maximum number of replicas that have written the same amount of data (the highest written bytes count). This ensures data consistency by:

1. **Retaining** the maximum number of replicas that have written the same amount of data.  
This avoids massive replica rebuilding operations, allows for efficient rebuilding when node disks recover from out-of-space issues and ensures that users can still read data consistently.
2. **Marking** other replicas as **ERR** to prevent data corruption.  
This ensures that users can read data consistently from retained replicas, and replicas marked as `ERR` will be rebuilt from retained replicas to maintain data integrity when node disks recover from out-of-space issues.
3. **Maintaining** volume accessibility even when all underlying disks are full.

For example, if replicas A, B, and C encounter space errors after writing 1MB, 2MB, and 2MB respectively, replicas B and C (having written the most data consistently) will remain active while replica A is marked as **ERR**.

### Solutions

When encountering the `no space left on device` error, first check whether the volume’s filesystem is full, and then check whether the disk hosting the volume replica is full.

- **Check volume filesystem usage**

    If the volume's filesystem usage is 100% using the following command:

    ```bash
    df -h /mnt/your-volume
    ```

    Please expand the volume or remove the unnecessary files in the filesystem first.

- **Check Longhorn node disk usage**

    If the disk usage is 100% using the following command or checking the Longhorn UI page `Node > Node Disk`:

    ```bash
    # Check through Longhorn UI: Node > Node Disk
    # Or check the data path mount point
    df -h /var/lib/longhorn # default data path
    ```

    Please follow the steps to recovery the workloads:

    1. Scale down the workload.
    2. Expand the disk size, or remove unnecessary files, for example, [orphaned replica directories](../../../advanced-resources/data-cleanup/orphaned-data-cleanup#orphaned-replica-directories) and [used backing images](../../../advanced-resources/backing-image/backing-image#clean-up-backing-images), on the disk.
    3. Then scale up the workload.

## Recommended Maximum Volume Size Guidelines

Determining the maximum recommended volume size depends on **recovery time**; specifically ensuring a degraded volume and all of its retained data (volume head plus snapshots) can be synchronized over your network and disk within Longhorn's default 24-hour rebuilding timeout.

When planning volume capacity, you must evaluate both **rebuild performance bottlenecks** (network throughput vs. disk write speed) and **physical disk space limits** (node disk capacity and Longhorn storage settings).

### Sizing Calculation & Performance Bottlenecks

Replica rebuilding involves copying data blocks across the cluster network and writing them to the destination disk. The maximum data volume ($D_{max}$) Longhorn can successfully rebuild within the 24-hour timeout window (86,400 seconds) is governed by whichever component acts as the slower bottleneck.

#### Step 1: Calculate Available Rebuild Bandwidth

1. **Network Throughput Per Rebuild**: Network bandwidth for a single replica rebuild is constrained by the total available network bandwidth divided by the **Concurrent Replica Rebuild Per Node Limit** (default is **5**).

   > **Formula**: Network Per Rebuild = Total Network Bandwidth / Concurrent Replica Rebuild Limit

2. **Effective Rebuild Bandwidth**: The actual rebuild speed is limited by the minimum between your disk write throughput and the network bandwidth per rebuild calculated above.

   > **Formula**: Rebuild Bandwidth = Minimum(Disk Write Throughput, Network Per Rebuild)

#### Step 2: Calculate Maximum Rebuild Capacity ($D_{max}$)

Using the 24-hour (86,400 seconds) rebuild timeout window:

> **Formula**: Max Data (D-max) = Rebuild Bandwidth x 86,400 seconds

- **Example 1 (Network Bottleneck)**: With a 10Gbps network (~1,250 MiB/s total, yielding 250 MiB/s per rebuild slot across 5 concurrent rebuilds) and disk write throughput of 360 MiB/s:
  - Rebuild Bandwidth = Minimum(360 MiB/s, 250 MiB/s) = 250 MiB/s
  - D-max = 250 MiB/s x 86,400 s = ~21 TiB

- **Example 2 (Disk Write Bottleneck)**: With a 10Gbps network (250 MiB/s per rebuild slot) but slower disk write performance of 100 MiB/s:
  - Rebuild Bandwidth = Minimum(100 MiB/s, 250 MiB/s) = 100 MiB/s
  - D-max = 100 MiB/s x 86,400 s = ~8.24 TiB

#### Step 3: Adjust for Snapshots & Volume Head

During a rebuild, Longhorn synchronizes the volume head as well as all existing snapshot files in the chain. To prevent total volume rebuild time from exceeding 24 hours, the recommended maximum nominal volume size ($V_{final}$) decreases as snapshot retention increases:

> **Formula**: Final Max Volume Size = D-max / (Number of Snapshots + 1)

*(Where "+1" accounts for the Volume Head)*.

### Physical Disk Space & Longhorn Allocation Constraints

Rebuild bandwidth determines the maximum data size achievable within 24 hours, but **physical disk capacity** on your worker nodes dictates whether those volume replicas can actually be scheduled and stored.

1. **Allocatable Node Disk Space**:
   Longhorn calculates schedulable space on a disk using global settings:

   > **Formula**: Allocatable Space = (Total Disk Size - Reserved Space) x (Storage Over-Provisioning Percentage / 100)

   - `storage-reserved-percentage-for-default-disk` / `storage-minimal-available-percentage`: Reserves emergency buffer space to prevent node disk exhaustion.
   - `storage-over-provisioning-percentage`: Controls how much nominal volume capacity can be scheduled relative to physical disk size.

2. **Actual Space Consumption on Disk**:
   A volume replica's actual space usage on a node includes active data in the volume head, historical data across snapshots, and temporary buffer space used during snapshot deletion/purge operations.
   - When using `Snapshot Max Count` ($N$), the peak theoretical disk footprint per replica is:

     > **Formula**: Max Replica Disk Usage = (N + 1) x Volume Spec Size

   - Individual worker node disks must physically fit this total replica usage, or new replica allocation will fail with `no space left on device`.

### Case Studies

#### Scenario A: 1Gbps Network Environment (Standard Disks)

- **Cluster Hardware**: 1Gbps Storage Network, Worker nodes with 2 TiB dedicated SSD storage per node (Disk Write Speed: 100 MiB/s).
- **Longhorn Settings**: Default concurrent rebuild limit = 5; `storage-over-provisioning-percentage` = 100%.
- **Rebuild Bandwidth Calculation**:
  - Network limit per rebuild: 125 MiB/s / 5 = 25 MiB/s
  - Bottleneck: Minimum(100 MiB/s, 25 MiB/s) = 25 MiB/s
- **Max 24h Rebuild Data ($D_{max}$)**: 25 MiB/s x 86,400 s = ~2.1 TiB.
- **Sizing Recommendation**:
  - For volumes without snapshots (1 volume head): Final Max Volume Size = ~2.1 TiB.
  - For volumes retaining 2 snapshots ($N = 2$): Final Max Volume Size = 2.1 TiB / 3 = ~700 GiB.
  - **Physical Disk Check**: Each node's 2 TiB dedicated disk can safely host a 700 GiB replica with 2 snapshots ($3 \times 700\text{ GiB} = 2.1\text{ TiB}$ actual peak footprint).

#### Scenario B: 10Gbps High-Performance Environment (NVMe Drives)

- **Cluster Hardware**: 10Gbps Storage Network (~1,250 MiB/s), NVMe disks (Disk Write Speed: 360 MiB/s).
- **Rebuild Bandwidth Calculation**:
  - Network limit per rebuild: 1,250 MiB/s / 5 = 250 MiB/s
  - Bottleneck: Minimum(360 MiB/s, 250 MiB/s) = 250 MiB/s
- **Max 24h Rebuild Data ($D_{max}$)**: 250 MiB/s x 86,400 s = ~21 TiB.
- **Sizing Recommendation**:
  - For volumes with low snapshot retention (e.g., 2 snapshots): Final Max Volume Size = 21 TiB / 3 = ~7 TiB.
  - For workloads requiring high snapshot retention (e.g., 20 snapshots): Final Max Volume Size = 21 TiB / 21 = ~1 TiB.

### Testing Methodology

Longhorn derives these guidelines from empirical scalability testing across Public Cloud and On-Prem benchmark setups:

1. **Baseline Setup**: Deploy a volume with a single replica and write data to fill the nominal spec size (using `dd` for full sequential data or `fio` for sparse/random IO patterns).
2. **Trigger Rebuild**: Scale replica count from 1 to 2 to trigger immediate replica rebuilding over the network.
3. **Monitor Progress**: Track rebuild duration and transfer throughput until completion.
4. **Extrapolation**: Rebuild speeds across different data patterns (full vs. 4k-hole sparse data) are extrapolated to the 24-hour timeout window to establish safe maximum volume thresholds.
